# batch-62

./: README.md  extensions.txt
calendly/: next.config.ts  package-lock.json  package.json
calendly/src/app/: page.tsx
chatbot/: chatbot.html
crew-ai/: index.html
crew-ai/crew_project/: README.md  pyproject.toml
crew-ai/crew_project/src/crew_project/: crew.py  main.py
crew-ai/hello-world/: pyproject.toml
crew-ai/hello_world/: pyproject.toml
crew-ai/hello_world/src/hello_world/: __init__.py
crew-ai/pr7/: pyproject.toml
crew-ai/pr7/crewai_env/: pyvenv.cfg
crew-ai/pr7/src/pr7/: main.py
ecommerce/: README.md  cart.html  categories.html  index.html  products.html
ecommerce/css/: cart.css  categories.css  home.css  products.css  style.css
ecommerce/js/: cart-page.js  cart.js  categories.js  data.js  home.js  products.js
gen-ai/: class-1.ipynb
learn-agentic-ai/class-01/op_ag/: pyproject.toml
learn-agentic-ai/class-01/op_ag/src/op_ag/: __init__.py
learn-agentic-ai/class-01/w_op_ag/: hello.py  pyproject.toml
learn-agentic-ai/class-02/class_02/: .env  README.md  hello.py  pyproject.toml
learn-poetry/: README.md
learn-poetry/comments/: pyproject.toml
learn-poetry/comments/comments/: main.py
learn-poetry/comments/tests/: test_file.py
learn-poetry/fastapi-helloworld/: pyproject.toml
learn-poetry/fastapi-helloworld/fastapi_helloworld/: main.py
learn-poetry/posts/: .env  pyproject.toml
learn-poetry/posts/posts/: main.py  settings.py
learn-poetry/posts/tests/: test_file.py
learn-poetry/todo/: pyproject.toml
learn-poetry/todo-app/: pyproject.toml
learn-poetry/todo-app/todo_app/: main.py  settings.py
learn-poetry/todo-server/: pyproject.toml
learn-poetry/todo-server/app/: main.py  settings.py
learn-poetry/todo/tests/: test_file.py
learn-poetry/todo/todo/: main.py  settings.py
learn-python/assignments/high-low-game/: index.ipynb
learn-python/assignments/lms/: index.ipynb  lms.ipynb
learn-python/assignments/student-db-management/: index.ipynb
learn-python/online-lectures/week-2/: index.py
learn-python/projects/advanced/: index.ipynb
learn-python/projects/basics/: index.ipynb
learn-python/python-lectures/class-1/: index.ipynb  index.py  requirements.txt
learn-python/python-lectures/class-10/: index.ipynb
learn-python/python-lectures/class-11/: index.ipynb
learn-python/python-lectures/class-12/: index.ipynb  test.txt  transaction_file.csv
learn-python/python-lectures/class-13/: README.md  index.ipynb
learn-python/python-lectures/class-14/: index.ipynb
learn-python/python-lectures/class-15/: index.ipynb
learn-python/python-lectures/class-16/: index.ipynb  numpy-playlist.ipynb
learn-python/python-lectures/class-17/: index.ipynb
learn-python/python-lectures/class-18/: index.ipynb  my_card.csv  query_result.csv  student_data.csv
learn-python/python-lectures/class-2/: index.ipynb
learn-python/python-lectures/class-3/: index.ipynb
learn-python/python-lectures/class-4/: index.ipynb
learn-python/python-lectures/class-5/: index.ipynb
learn-python/python-lectures/class-6/: index.ipynb
learn-python/python-lectures/class-7/: class.ipynb
learn-python/python-lectures/class-8/: index.ipynb
learn-python/python-lectures/class-9/: index.ipynb  index.py
learn-python/python-lectures/numpy-revision/: class.ipynb  index.ipynb
learn-python/python-lectures/oop-revision/: index.ipynb
learn-python/python-lectures/pandas-revision/: class.ipynb
learn-python/week-2/: problems.md
learn-python/week-3/assignment/: basics.ipynb  calculator.ipynb
learn-python/week-6/: readme.md
openai-agents-sdk/class-01/: README.md  batch-62.code-workspace
openai-agents-sdk/class-02-streamig/: test_bot.ipynb  test_bot.py
openai-agents-sdk/class-02-streamig/chainlit-hello/: .env  README.md  chatbot.py  pyproject.toml
openai-agents-sdk/class-02-streamig/chainlit-hello/src/chainlit_hello/: __init__.py
quarter-02-agenticAI/assignments/: concepts-01.md  gemini-api-for-images-03.md  understaning-api-key-02.md
webchecker/: detector.js  detector_inject.js  manifest.json  popup.css  popup.html  popup.js
(+16 files in other folders)
