[tool.poetry]
name = "comments"
version = "0.1.0"
description = ""
authors = ["Wasim Rashid <wasim.rashid@developers.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
uvicorn = "^0.31.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
httpx = "^0.27.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
