[tool.poetry]
name = "fastapi-helloworld"
version = "0.1.0"
description = ""
authors = ["Wasim Rashid <wasim.rashid@developers.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
