[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Wasim Rashid <wasim.rashid@developers.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
uvicorn = "^0.30.6"
psycopg = {extras = ["binary"], version = "^3.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
