[project]
name = "op-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wasim Rashid", email = "wasim.rashid@developers.studio" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
op-ag = "op_ag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
